[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/BladeProjectile.gd" type="Script" id=1]
[ext_resource path="res://images/skill_sprites/distance_blade.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 45, 63, 45 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 63, 45, 63, 45 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 63, 45 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 63, 0, 63, 45 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "shoot_left",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "shoot_right",
"speed": 5.0
} ]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.00619195, 0.972727 ), 0.0, 0.0, 0, 0, Vector2( 0.996904, 0.263636 ), -0.331525, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.0041841, 0.0125523, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0.792969, 0.198242, 0.198242, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8, 8 )

[node name="Projectile" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="ProjectileSprite" type="AnimatedSprite" parent="."]
position = Vector2( -5.33333, 0 )
scale = Vector2( 0.5, 0.75 )
z_index = 4
frames = SubResource( 5 )
animation = "shoot_right"
playing = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
show_behind_parent = true
amount = 30
lifetime = 0.5
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 2, 11 )
gravity = Vector2( 0, 0 )
angular_velocity = 500.0
angular_velocity_random = 1.0
linear_accel = 50.0
scale_amount = 4.0
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.33333, 0 )
scale = Vector2( 2, 2 )
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
